# vedio_panoram

./: .gitignore  报告.md
Real-time/: CMakeLists.txt
SIFT/: 001_sift_learn.ipynb  002_test_image_stitching_module.ipynb  003_test_vedio.ipynb  image_stitching  image_stitching.cpp  image_stitching_back.cpp  image_stitching_bindings.cpp  setup.py  video_stitching  video_stitching.cpp
SIFT10/: main.ipynb
SIFT10/utils/: functions.py
SIFT2/: image_stitching  image_stitching.cpp  暂定成功的.ipynb  调参2.ipynb
SIFT4/: test_openstitch.ipynb
SIFT5/: stitched_output.avi
SIFT6/: test01.ipynb  test_02_video.ipynb
SIFT7/: test02.ipynb  video_stitch.cpp
SIFT9/: main.ipynb  test_video_stitch.ipynb  video_stitch.ipynb
SIFT9/utils/: functions.py
trash/SIFT/: 003_test_vedio.ipynb  image_stitching  image_stitching.cpp  image_stitching.hpp  image_stitching_back.cpp  video_stitching.cpp
trash/SIFT2/: 003模块化.ipynb  image_stitching.cpp  暂定成功的.ipynb  调参2.ipynb
trash/SIFT6/: test01.ipynb
trash/SIFT7/: image_stitching  test.ipynb  test01.ipynb  test04.ipynb  video_stitch
trash/SIFT8/: test_video3.ipynb  test_video4.ipynb
trash/SIFT9/: test_video_stitch.ipynb
trash/SIFT9/utils/: functions.py
